<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grössen Messer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_settings">Settings</string>
    <string name="iv_skizze">Bild</string>
    <string name="Hoehe">b (cm)</string>
    <string name="Abstand">a (cm)</string>
    <string name="Beta">β</string>
    <string name="Alpha">α</string>
    <string name="kamera">Kamera</string>
    <string name="berechnen">Berechnen</string>
</resources>

